# learn-opengl

./: .gitignore  CMakeLists.txt  conanfile.py  setup_msvc_debug.ps1
src/: camera.h  main.cpp  shader.cpp  shader.h
src/shaders/: color.frag  shader.vs
test_package/: conanfile.py
